--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 <div class="close" id="guanbi18"></div>
                                 <div class="title"></div>
                                 <div class="line"></div>
-                                <div class="btn-list"><a class="btn" href="tzmjxz.html"><img src="./images/icon9.png" alt=""><span>  名爵 APP安卓官方下载</span></a><a class="btn" href="https://bv02.cc/mjpg1xz.html"><img src="./images/icon9.png" alt=""><span>  名爵 APP苹果直装下载</span></a><a class="btn" href="http://rdwa4p3p.rcwvvw2ewa.com/"><img src="./images/icon10.png" alt=""><span>  名爵H5登录</span></a>
+                                <div class="btn-list"><a class="btn" href="tzmjxz.html"><img src="./images/icon9.png" alt=""><span>  名爵 APP安卓官方下载</span></a><a class="btn" href="https://bv02.cc/mjpg1xz.html"><img src="./images/icon9.png" alt=""><span>  名爵 APP苹果直装下载</span></a><a class="btn" href="https://www.mjweb70.xyz/"><img src="./images/icon10.png" alt=""><span>  名爵H5登录</span></a>
                                     <a class="btn" id="apppg18"><img src="./images/icon11.png" alt=""><span>  名爵苹果教程</span></a><a class="btn" id="anzhuo18"><img src="./images/icon11.png" alt=""><span>  名爵安卓教程</span></a></div>
                             </div>
                         </view>
