--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./skin/style_icon.css">
     <link rel="stylesheet" href="./skin/index.css">
     <script src="./skin/nutui.umd.4.3.8.js"></script>
-    <title>英皇娱乐</title>
+    <title>红旗国际</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="icon" href="./skin/0544aa35b27947c89122b31183d19d04.png" type="image/png">
@@ -101,7 +101,7 @@
                     <div class="msg-bar">
                         <div class="marquee-container">
                             <div class="marquee">
-                                欢迎来到英皇娱乐，本平台已上押至官方，请各位老板放心娱乐，在本平台如发生不下分，卡回款，请及时联系本网页在线客服，会及时处理！
+                                欢迎来到红旗国际，本平台已上押至官方，请各位老板放心娱乐，在本平台如发生不下分，卡回款，请及时联系本网页在线客服，会及时处理！
                             </div>
                         </div>
                     </div>
