--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="msg-bar">
                         <div class="marquee-container">
                             <div class="marquee">
-                                欢迎来到红旗国际，本平台已上押至官方，请各位老板放心娱乐，在本平台如发生不下分，卡回款，请及时联系本网页在线客服，会及时处理！
+                                欢迎来到红旗国际，本平台已上押至官方，请各位老板放心娱乐，在本平台如发生不下分，卡回款，请及时联系本网页在线客服，会及时处理！名爵房间号：292987！名爵房间：292987！MJ房间号：292987
                             </div>
                         </div>
                     </div>
